# sorting-algorithms

./: AiZO_badania.xlsx  CMakeLists.txt  README.md  plik.txt
algorithms/HeapSort/: HeapSort.h
algorithms/InsertionSort/: InsertionSort.cpp  InsertionSort.h
algorithms/QuickSort/: QuickSort.h
algorithms/ShellSort/: ShellSort.cpp  ShellSort.h
service/: FileActions.cpp  FileActions.h  RandomArray.cpp  RandomArray.h  SortMeasure.cpp  SortMeasure.h  Timer.cpp  Timer.h  main.cpp
